--- a/i3/config
+++ b/i3/config
@@ -177,7 +177,7 @@ mode "$mode_system" {
 }
 
 bindsym $mod+BackSpace mode "$mode_system"
-bindsym $mod+Ctrl+l exec i3lock 
+bindsym $mod+Ctrl+l exec i3lock -i /home/shayan/Pictures/black.png -t
 
 
 # resize window (you can also use the mouse for that)
@@ -226,21 +226,21 @@ bar {
 		}
 }
 
-for_window [class=".*"] border pixel 1
+# i3-gaps
+for_window [class=".*"] border pixel 0
+gaps inner 10
 
 # Set desktop wallpaper on startup
 exec --no-startup-id nitrogen --restore
 
 # Keybindings to open applications
-bindsym $mod+e exec thunar
+bindsym $mod+e exec caja
 
 # Start Picom
 exec picom &
 
 # Start Polybar
 exec /usr/local/bin/polybar
-
-
 
 
 
