--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -6,6 +6,7 @@
 #
 # My config. Not much to see here; just some pretty standard stuff.
 
+#backend="glx"
 backend="xr_glx_hybrid"
 use-damage="false"
 vsync="true"
@@ -70,7 +71,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 0.8
-inactive-opacity = 0.9
+inactive-opacity = 1
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -109,6 +110,7 @@ opacity-rule = [
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
+  
 ];
 
 wintypes:
