--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -152,7 +152,7 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{F#F0C674}%ifname%%{F-} %essid%
 
 [module/network]
 type = internal/network
@@ -163,7 +163,7 @@ interval = 5.0
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#F0C674}%ifname%%{F-}
 
 [module/date]
 type = internal/date
